syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.grpc.proto";
option java_outer_classname = "UserProto";

package proto;

// User handles commands dispatch
service User {
  rpc DispatchCommand(DispatchCommandRequest) returns (DispatchCommandResponse);
}

// DispatchCommandRequest is passed when dispatching
message DispatchCommandRequest {
  string name = 1;
  bytes payload = 2;
}

// DispatchCommandResponse is empty.
message DispatchCommandResponse {}
